[gd_scene load_steps=7 format=3 uid="uid://co3f060h130dr"]

[ext_resource type="Script" path="res://Pipes.gd" id="1_nwjsy"]
[ext_resource type="Script" path="res://Top.gd" id="2_dt5b7"]
[ext_resource type="Texture2D" uid="uid://vbnk18dat0by" path="res://FMS5JNNIM9E2EVN.webp" id="3_rcbrp"]
[ext_resource type="Script" path="res://Btm.gd" id="4_1gcu1"]
[ext_resource type="AudioStream" uid="uid://dk0rekfh0um0n" path="res://ding-36029.mp3" id="5_seyv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0voc"]
size = Vector2(200.539, 1079.5)

[node name="Pipes" type="Node2D"]
position = Vector2(1084, 288)
scale = Vector2(0.68, 0.701006)
script = ExtResource("1_nwjsy")

[node name="Top" type="Area2D" parent="."]
position = Vector2(0, 422.25)
scale = Vector2(0.52799, 0.557592)
script = ExtResource("2_dt5b7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_f0voc")

[node name="Sprite2D" type="Sprite2D" parent="Top"]
texture = ExtResource("3_rcbrp")

[node name="Btm" type="Area2D" parent="."]
position = Vector2(0, -425.103)
rotation = 3.14159
scale = Vector2(0.52799, 0.557592)
script = ExtResource("4_1gcu1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Btm"]
position = Vector2(-2.78564, -1)
shape = SubResource("RectangleShape2D_f0voc")

[node name="Sprite2D" type="Sprite2D" parent="Btm"]
texture = ExtResource("3_rcbrp")

[node name="Point" type="Area2D" parent="."]
position = Vector2(0, 0.00012207)
scale = Vector2(0.0881093, 0.160402)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_f0voc")

[node name="gotpoint" type="AudioStreamPlayer2D" parent="Point"]
stream = ExtResource("5_seyv4")

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Btm" to="." method="_on_btm_body_entered"]
[connection signal="body_entered" from="Point" to="." method="_on_point_body_entered"]
